<resources>
    <string name="app_name">TreeSapV2New</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TreeSap</string>
    <string name="nav_header_subtitle">Access to Tree Data</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_big_red_button_identifier">BigRedButtonIdentifier</string>
    <string name="add_method_dialog_title">Choose your method</string>
    <string name="title_activity_maps">Map</string>
    <string name="distanceFromTreePref">distanceFromTreePref</string>
    <string name="databasesUsedSelector">databasesUsedSelector</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="locationMarkerSwitch">locationMarkerSwitch</string>
    <string name="username_of_user">No user found</string>
    <string name="itree_link"><a href="https://www.itreetools.org">i-Tree Web Tools</a></string>
    <string name="natural_tree_link"><a href="http://www.treebenefits.com/calculator/">National Tree Benefit Calculator</a></string>
    <string name="inaturalist_link"><a href="https://www.inaturalist.org">iNaturalist</a></string>
    <string name="emailFeedback">feedback@treesap.info</string>
    <string-array name="zoom_array">
        <item>Very Close</item>
        <item>Close</item>
        <item>Far</item>
    </string-array>
    <string-array name="known_trees">
        <item>	American basswood	</item>
        <item>	American beech	</item>
        <item>	American chestnut	</item>
        <item>	American elm	</item>
        <item>  American sweetgum </item>
        <item>	American sycamore	</item>
        <item>	Austrian pine	</item>
        <item>  Autumn blaze maple</item>
        <item>	Balsam fir	</item>
        <item>	Bitternut hickory	</item>
        <item>	Black ash	</item>
        <item>	Black birch	</item>
        <item>	Black locust	</item>
        <item>	Black maple	</item>
        <item>	Black poplar	</item>
        <item>	Black tupelo	</item>
        <item>	Black walnut	</item>
        <item>	Black willow	</item>
        <item>	Blue spruce	</item>
        <item>	Boxelder	</item>
        <item>	Bur oak	</item>
        <item>	Butternut	</item>
        <item>	Callery pear	</item>
        <item>	Cherry plum	</item>
        <item>	Chinese privet	</item>
        <item>  Colorado blue spruce</item>
        <item>	Common chokecherry	</item>
        <item>  Common juniper  </item>
        <item>  Crimson king maple</item>
        <item>	Dawn redwood	</item>
        <item>	Eastern red cedar	</item>
        <item>	Eastern redbud	</item>
        <item>	Eastern white pine	</item>
        <item>	European alder	</item>
        <item>	European beech	</item>
        <item>	European hornbeam	</item>
        <item>	Flowering dogwood	</item>
        <item>	Freeman maple	</item>
        <item>	Ginkgo	</item>
        <item>	Green ash	</item>
        <item>	Hedge maple	</item>
        <item>	Honeylocust	</item>
        <item>	Japanese flower crabapple	</item>
        <item>	Japanese flowering cherry	</item>
        <item>	Japanese maple	</item>
        <item>	Japanese tree lilac	</item>
        <item>	Japanese zelkova	</item>
        <item>	Katsura tree	</item>
        <item>	Littleleaf linden	</item>
        <item>	London planetree	</item>
        <item>	Mountain maple	</item>
        <item>	Mountain silverbell	</item>
        <item>	Northern hackberry	</item>
        <item>	Northern red oak	</item>
        <item>	Norway maple	</item>
        <item>	Norway spruce	</item>
        <item>  Ohio buckeye  </item>
        <item>	Paper birch	</item>
        <item>	Pawpaw	</item>
        <item>	Pin oak	</item>
        <item>  Planetree maple</item>
        <item>  Red birch</item>
        <item>	Red maple	</item>
        <item>  Red oak</item>
        <item>  Red pine</item>
        <item>	River birch	</item>
        <item>	Rock elm	</item>
        <item>	Rose-of-sharon	</item>
        <item>	Scots pine	</item>
        <item>	Siberian elm	</item>
        <item>	Silver linden	</item>
        <item>	Silver maple	</item>
        <item>	Slippery elm	</item>
        <item>	Southern catalpa	</item>
        <item>	Staghorn sumac	</item>
        <item>	Striped maple	</item>
        <item>	Sugar maple	</item>
        <item>	Swamp white oak	</item>
        <item>	Sweet cherry	</item>
        <item>	Sweet crabapple	</item>
        <item>	Sweetgum	</item>
        <item>	Sycamore maple	</item>
        <item>	Tulip tree	</item>
        <item>	White ash	</item>
        <item>	White oak	</item>
        <item>	White spruce	</item>
        <item>	Wych elm	</item>
        <item>  Yellow poplar  </item>
        <item>  Yew  </item>
    </string-array>
</resources>