<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/more_info_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        android:src="@drawable/icons8_multiply_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/treesap_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dark_logo"
            android:scaleType="centerCrop"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TreeSap 2.0"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="Copyright of Hope College 2019. Created by Mike Jipping, Louis Kopp, Caleb Tallquist, Micah Chrisman, and Josie Crane."
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acknowledgements"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="i-Tree was used extensively in the making of this app. It provided the data for nearly all calculations performed."
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:text="Resources"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itree_link"
            android:textColor="@color/new_invented_color"
            android:id="@+id/itree_link"
            android:layout_marginBottom="3dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/natural_tree_link"
            android:textColor="@color/new_invented_color"
            android:layout_marginBottom="3dp"
            android:id="@+id/nat_tree_link"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inaturalist_link"
            android:id="@+id/inaturalist_link"
            android:layout_marginBottom="3dp"
            android:textColor="@color/new_invented_color"
            android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>