<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="settings"
        android:title="Basic Settings">

        <MultiSelectListPreference
            android:dialogTitle="Choose databases"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"
            android:key="@string/databasesUsedSelector"
            android:summary="Select which data sources will be displayed on the map and included in coordinate searches"
            android:title="Active data sources" />

        <EditTextPreference
            android:dialogTitle="Max identification distance"
            android:dialogMessage="Trees will be identified only if your coordinates are within this many meters of the tree."
            android:key="@string/distanceFromTreePref"
            android:numeric="decimal"
            android:defaultValue="100000"
            android:title="Max identification distance (meters)" />

        <SwitchPreference
            android:id="@+id/location_toggle"
            android:defaultValue="true"
            android:key="@string/locationMarkerSwitch"
            android:summary="See your marker on the map"
            android:title="Location Marker" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="account_header"
        android:title="Account">
        <PreferenceScreen
            android:key="account_screen"
            android:title="Account Info"
            android:widgetLayout="@layout/next_button_settings"
            android:selectable="true"
            >
            <PreferenceCategory
                android:key="account"
                android:title="Account">
                <Preference
                    android:key="logout_pref"
                    android:title="Logout:"
                    android:widgetLayout="@layout/logout_button">
                </Preference>

                <Preference
                    android:key="change_username"
                    android:title="Change Username">
                </Preference>

                <Preference
                    android:key="change_password"
                    android:title="Change Password">
                </Preference>

                <Preference
                    android:key="login_pref"
                    android:title="Login"
                    android:widgetLayout="@layout/login_button">
                </Preference>

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other"
        android:title="Other">
        <PreferenceScreen
            android:key="acknowledgements"
            android:title="More Information"
            android:widgetLayout="@layout/next_button_settings"
            android:selectable="true">
            <Preference
                android:enabled="true"
                android:key="itree_ack"
                android:selectable="false"
                android:summary=""
                android:title="iTree Web Tools" />
            <Preference
                android:enabled="true"
                android:key="benefit_calc_ack"
                android:selectable="false"
                android:summary=""
                android:title="National Tree Benefit Calculator" />
            <Preference
                android:enabled="true"
                android:key="iNaturalist_ack"
                android:selectable="false"
                android:summary=""
                android:title="iNaturalist" />
            <Preference
                android:enabled="true"
                android:key="creators_ack"
                android:selectable="false"
                android:summary="Created by Mike Jipping, Louis Kopp, Caleb Tallquist, Micah Chrisman, and Josie Crane."
                android:title="Copyright of Hope College" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>